deployment/prod/pdf_handler/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-handler
  namespace: production
  labels:
    app: pdf-handler
    version: "0.1.0-rc.0"
    environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdf-handler
      environment: prod
  template:
    metadata:
      labels:
        app: pdf-handler
        version: "0.1.0-rc.0"
        environment: prod
    spec:
      containers:
      - name: pdf-handler
        image: aldrickdev/pdf-handler:0.1.0-rc.0
        ports:
        - containerPort: 8000
          name: http
        resources:
          requests:
            # memory: "256Mi"
            # cpu: "200m"
            memory: "128Mi"
            cpu: "100m"
          limits:
            # memory: "1Gi"
            memory: "512Mi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - name: apmsocketpath
          mountPath: /var/run/datadog
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /var/run/datadog/
          name: apmsocketpath
---
apiVersion: v1
kind: Service
metadata:
  name: pdf-handler-service
  namespace: production
  labels:
    app: pdf-handler
    environment: prod
spec:
  selector:
    app: pdf-handler
    environment: prod
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
